# p2psimpy

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/p2psimpy/: simulation.py
src/p2psimpy/services/: connection_manager.py
tests/: test_simulation.py
